--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>io.github.parentpom</groupId>
+        <artifactId>ppom</artifactId>
+        <version>3.4.6</version>
+      </parent>
     <groupId>com.litesoftwares</groupId>
     <artifactId>coingecko-java</artifactId>
     <version>1.0-SNAPSHOT</version>
